# repo_report

./: Cargo.toml  Makefile  README.ja.md  README.md
.claude/agents/: aosp.md  cli-reporter.md  tui-reporter.md
.claude/skills/repo-report/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: errors.md
src/: aosp.rs  app.rs  git.rs  main.rs  output.rs  scanner.rs  types.rs
src/ui/: mod.rs
tests/: helpers.sh  test_noninteractive.sh  test_repo_commands.sh  test_repo_detection.sh  test_rust_noninteractive.sh  test_tui_keys.sh
tools/: make_demo_gif.py  make_tui_screenshot.py
