[package]
name = "repo-report"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "repo-report-tui"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
walkdir = "2"
anyhow = "1"
chrono = "0.4"

[profile.release]
strip = true
opt-level = 3
