[package]
name = "repo-report"
version = "0.3.0"
edition = "2021"
description = "Interactive TUI for monitoring git repository status across a workspace"
authors = ["nigoh"]
license = "MIT"
repository = "https://github.com/nigoh/repo_report"
keywords = ["git", "tui", "workspace", "aosp", "repo"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "repo-report-tui"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
walkdir = "2"
anyhow = "1"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
opt-level = 3
